# java-mrz-ocr-sdk

./: .gitignore  README.md  pom.xml
jni/: CMakeLists.txt  NativeLabelRecognizer.cxx  NativeLabelRecognizer.h
src/main/java/com/dynamsoft/dlr/: MrzParser.java  MrzResult.java  NativeLabelRecognizer.java  NativeLoader.java  Test.java  Utils.java
